v1.1.0/get-started/validators/rocketpool.mdx
# Rocketpool Minipool Registry Guide

This guide explains how to register Rocket Pool validators with the **Rocketpool Minipool Registry** for mev-commit, how freezing works, and how to deregister.

---

## How it ties to a minipool

The registry relies on **Rocketpool’s contracts** to check for each validator’s associated minipool, confirm whether the minipool is **active (Staking)**, and determine the **authorized operators** (the node operator and the withdrawal address). The registry itself does not remap keys to minipools and operators; Rocketpool contract data is checked at the time of the relevant call.

---

## Registering validators

The RocketMinipool Registry is currently deployed to Hoodi testnet at address [0x30d478b02918c4b11731efc4868d848d551e79b2](https://hoodi.etherscan.io/address/0x30d478b02918c4b11731efc4868d848d551e79b2#writeProxyContract), with mainnet deployment planned in the near future.

Call:
```solidity
registerValidators(bytes[] valPubKeys)
```

Requirements per key:
- The pubkey must be associated with an **active Rocketpool minipool**.
- The validator must not already be registered.
- The caller must be the **node operator** or the **withdrawal address** for that minipool.

**Etherscan input tip (bytes[]):**
```
0xkey1, 0xkey2, 0xkey3, ...
```
No brackets, no quotes.

---

## Freezing & unfreezing

- **Freeze:** The **freeze oracle** can call `freeze(bytes[] valPubKeys)` for validators that violate protocol rules. Frozen validators are considered opted out.
- **Unfreeze:** Anyone can call `unfreeze(bytes[] valPubKeys)` and pay `unfreezeFee * numberOfKeys`. The current fee and receiver can be checked on-chain. The owner can also override with `ownerUnfreeze(bytes[] valPubKeys)`.

---

## Deregistration

Deregistration is a two-step process:
- Call `requestValidatorDeregistration(bytes[] valPubKeys)` to start the timer.
- After `deregistrationPeriod` has passed, call `deregisterValidators(bytes[] valPubKeys)` to complete it. Validators must not be frozen.

Helper: `getEligibleTimeForDeregistration(bytes pubkey)` returns the timestamp when a validator can be deregistered. A value of 0 indicates that no deregistration request has been made for the key.
